--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "环境数据分析与可视化"
 author: "谭巧国"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-output: bookdown::bs4_book
+output: bookdown::gitbook
 split_by: section
 documentclass: book
 bibliography: [book.bib, packages.bib]
